# internal/user/dto.go
@@ -19,3 +19,26 @@ type UserResponse struct {
 	Email    string    `json:"email"`
 	Role     string    `json:"role"`
 }
+
+type LoginRequest struct {
+	Identifier string `json:"identifier" validate:"required"`
+	Password   string `json:"password" validate:"required"`
+}
+
+type ResendConfirmationRequest struct {
+	Email string `json:"email" validate:"required,email"`
+}
+
+type LoginResponse struct {
+	AccessToken  string       `json:"access_token"`
+	RefreshToken string       `json:"refresh_token"`
+	User         UserResponse `json:"user"`
+}
+
+func (req *LoginRequest) Validate() []string {
+	var errMsgs []string
+	if err := validate.Struct(req); err != nil {
+		errMsgs = append(errMsgs, "Password and identifier are required")
+	}
+	return errMsgs
+}
